Create new page order and ipoteka

--- a/Content/less/components/button.less
+++ b/Content/less/components/button.less
@@ -293,4 +293,25 @@ select + .button{
         color: inherit;
         outline: none;
     }
+
+    // Modificator `link--reset`
+    &--reset{
+        text-decoration: none;
+        color: inherit;
+    }
+
+    // Modificator `link--dashed`
+    &--dashed{
+        border-bottom: 1px dashed;
+    }
+
+    // Modificator `link--dotted`
+    &--dotted{
+        border-bottom: 1px dotted;
+    }
+
+    // Modificator 'link--line'
+    &--line{
+        text-decoration: underline;
+    }
 }
