--- a/Content/less/components/reset.less
+++ b/Content/less/components/reset.less
@@ -76,7 +76,7 @@ a {
     color: #034da2;
     &:hover{
         text-decoration: none;
-        color: inherit;
+        color: #034da2;
     }
 }
 
