--- a/views/home.html
+++ b/views/home.html
@@ -5,7 +5,7 @@
         <data-owl-carousel class="owl-carousel"
                 data-options="{items:1, loop:true, autoplay: true, autoplaySpeed: 1000}">
             <div owl-carousel-item="" data-ng-repeat="item in items1" class="item">
-                <img src="{{item.url}}" alt="{{item.alt}}">
+                <img data-ng-src="{{item.url}}" alt="{{item.alt}}">
             </div>
         </data-owl-carousel>
     </div>
@@ -18,33 +18,33 @@
         <h1>Агентство недвижимости ИНКОМ — крупнейшее в Москве</h1>
         <p>ИНКОМ-Недвижимость — агентство недвижимости, занимающее ведущие позиции на рынке риэлторских услуг. По оценкам экспертов, значительная часть организованных сделок в московском регионе приходится именно на «ИНКОМ», что позволяет нам вот уже многие годы занимать лидирующее место среди агентств недвижимости Москвы и Подмосковья.</p>
 
-        <ul class="grid grid-col--1-5 text--center list">
-            <li>
+        <ul class="grid text--center list">
+            <li class="col--1-5">
                 <a href="#">
                     <span class="list__teaser"><img src="/Content/img/cat/icon01.png" alt=""></span>
                     <span class="list__link">Квартиры и комнаты</span>
                 </a>
             </li>
-            <li>
-                <a href="#">
+            <li class="col--1-5">
+                <a href="#/">
                     <span class="list__teaser"><img src="/Content/img/cat/icon02.png" alt=""></span>
                     <span class="list__link">Новостройки</span>
                 </a>
             </li>
-            <li>
-                <a href="#">
+            <li class="col--1-5">
+                <a href="#/">
                     <span class="list__teaser"><img src="/Content/img/cat/icon03.png" alt=""></span>
                     <span class="list__link">Аренда квартир и комнат</span>
                 </a>
             </li>
-            <li>
-                <a href="#">
+            <li class="col--1-5">
+                <a href="#/">
                     <span class="list__teaser"><img src="/Content/img/cat/icon04.png" alt=""></span>
                     <span class="list__link">Коттеджи, таунхаусы, участки</span>
                 </a>
             </li>
-            <li>
-                <a href="#">
+            <li class="col--1-5">
+                <a href="#/">
                     <span class="list__teaser"><img src="/Content/img/cat/icon05.png" alt=""></span>
                     <span class="list__link">Коммерческая недвижимость</span>
                 </a>
@@ -62,8 +62,8 @@
             <a href="#" class="text--h5 text--subscribe">Подписаться</a>
         </h3>
 
-        <ul class="grid grid-col--1-4 list">
-            <li>
+        <ul class="grid list">
+            <li class="col--1-4">
                 <a href="#">
                     <span class="list__teaser"><img src="/Content/img/news/news-1.png" alt=""></span>
                 </a>
@@ -72,7 +72,7 @@
                     Цена ВИП-ложи на финальные игры Чемпионата мира по хоккею равна стоимости трехкомнатной квартиры в центре Москвы
                 </a>
             </li>
-            <li>
+            <li class="col--1-4">
                 <a href="#">
                     <span class="list__teaser"><img src="/Content/img/news/news-2.png" alt=""></span>
                 </a>
@@ -81,7 +81,7 @@
                     «Респектабельное» Можайское шоссе за год потеряло в цене 46%, тогда как «неблагополучное» Горьковское подорожало на 18%
                 </a>
             </li>
-            <li>
+            <li class="col--1-4">
                 <a href="#">
                     <span class="list__teaser"><img src="/Content/img/news/news-3.png" alt=""></span>
                 </a>
@@ -90,7 +90,7 @@
                     «Каникулярный» найм квартиры: сдал в Москве, снял в Крыму – усиливающийся тренд бюджетного отдыха
                 </a>
             </li>
-            <li>
+            <li class="col--1-4">
                 <a href="#">
                     <span class="list__teaser"><img src="/Content/img/news/news-4.png" alt=""></span>
                 </a>
