add page training-center

--- a/Content/less/components/list.less
+++ b/Content/less/components/list.less
@@ -83,8 +83,11 @@
         & > li{
             position: relative;
             margin-bottom: 10px;
-            text-decoration: underline;
             padding-left: 20px;
+
+            & a{
+                text-decoration: underline;
+            }
 
             &:before{
                 content: '—';
