--- a/Content/less/components/list.less
+++ b/Content/less/components/list.less
@@ -41,6 +41,14 @@
         }
     }
 
+    // Element 'list__small'
+    &__small{
+        font-size: 75%;
+        line-height: 10px;
+        color: #555555;
+        font-style: italic;
+    }
+
     // Element 'list__teaser'
     &__teaser{
         display: inline-block;
