Add page company.html

--- a/Content/less/components/list.less
+++ b/Content/less/components/list.less
@@ -28,6 +28,18 @@
         }
     }
 
+    // Modificator 'list--more'
+    &--more{
+        & > li{
+            margin-bottom: 8px;
+
+            & > a{
+                text-decoration: underline;
+                font-style: italic;
+            }
+        }
+    }
+
     // modificator 'list--img'
     &--img{
 
