--- a/views/jobs/training-center.html
+++ b/views/jobs/training-center.html
@@ -4,7 +4,7 @@
         <li><span>Недвижимость</span></li>
     </ul>
 
-    <div class="grid grid--small">
+    <div class="grid">
         <div class="col--3-4">
             <h1>Учебный центр</h1>
             <p>Залогом успеха любой компании является профессионализм работы ее сотрудников. Специально созданный Учебный центр Инкома обучает новичков профессии риэлтор, а также помогает сотрудникам повысить свою квалификацию и развить навыки, необходимые для профессионального успеха.</p>
@@ -39,7 +39,7 @@
 
             <p class="text--h4">Смотрите также</p>
 
-            <ul class="list">
+            <ul class="list list--more">
                 <li>
                     <a href="#/">Страница стажера</a>
                 </li>
