--- a/Content/less/components/text.less
+++ b/Content/less/components/text.less
@@ -40,6 +40,9 @@
     &--price{
         color: #710909 !important;
     }
+    &--link{
+        color: #034da2;
+    }
     &--bold {
         font-weight: 700;
     }
