Add page kotteg and arenda-kottedzhey

--- a/Content/less/components/navbar.less
+++ b/Content/less/components/navbar.less
@@ -189,9 +189,9 @@
                 & > ul{
                     width: 33%;
 
-                    & + ul{
-                        margin-left: 0.3%;
-                    }
+                    // & + ul{
+                    //     margin-left: 0.3%;
+                    // }
 
                 }
             }
@@ -200,11 +200,7 @@
                 display: inline-block;
                 text-align: left;
                 vertical-align: top;
-                margin-right: 20px;
-
-                // & + ul{
-                //     margin-left: 32px;
-                // }
+                // margin-right: 20px;
 
                 & span{
                     display: inline-block;
