--- a/Content/less/components/panel.less
+++ b/Content/less/components/panel.less
@@ -49,6 +49,32 @@
         }
     }
 
+    // Modificator 'panel--realty'
+    &--realty{
+        display: table;
+        padding: 10px;
+
+        & .img{
+            display: table-cell;
+            width: 40%;
+        }
+
+        & .text{
+            display: table-cell;
+            vertical-align: middle;
+            font-size: 22px;
+            color: #034da2;
+            padding-left: 15px;
+            font-weight: 700;
+
+            &__desc{
+                display: inline-block;
+                font-size: 16px;
+                line-height: 20px;
+            }
+        }
+    }
+
     // Modificator 'panel--vacancy'
     &--vacancy{
         margin-bottom: 20px;
