--- a/views/component/list-room.html
+++ b/views/component/list-room.html
@@ -18,7 +18,7 @@
             <td>
                 <div class="table-search__img">
                     <a href="#/sale-realty/flats/search-result">
-                        <img src="http://www.incom.ru/images/object_images/1390220/thumb.jpg" title="Вторичная недвижимость">
+                        <img src="/Content/img/room/room.jpg" title="Вторичная недвижимость">
                     </a>
 
                     <div class="table-search__badge">
@@ -60,7 +60,7 @@
             <td>
                 <div class="table-search__img">
                     <a href="#/">
-                        <img src="http://www.incom.ru/images/object_images/1389750/thumb.jpg" title="Вторичная недвижимость">
+                        <img src="/Content/img/room/room.jpg" title="Вторичная недвижимость">
                     </a>
 
                     <div class="table-search__badge">
@@ -87,7 +87,7 @@
             <td>
                 <div class="table-search__img">
                     <a href="#/">
-                        <img src="http://www.incom.ru/images/object_images/1390169/thumb.jpg" title="Вторичная недвижимость">
+                        <img src="/Content/img/room/room.jpg" title="Вторичная недвижимость">
                     </a>
 
                     <div class="table-search__badge">
