--- a/views/jobs/vacancy.html
+++ b/views/jobs/vacancy.html
@@ -4,12 +4,10 @@
         <li><span>Недвижимость</span></li>
     </ul>
 
-    <div class="panel margin--top-large">
-        <h1>Работа в ИНКОМ-Недвижимость</h1>
-    </div>
-
     <div class="grid grid--small">
         <div class="col--3-4">
+            <h1 class="margin--bottom">Работа в ИНКОМ-Недвижимость</h1>
+
             <p>Ищете интересную работу? Вы готовы получать новые знания и опыт, а также открыты для общения с новыми, интересными людьми?</p>
             <p>ИНКОМ-Недвижимость — стабильная и успешная компания, лидирующая на рынке недвижимости Москвы и Московской области, обладатель профессиональных наград, надежный и привлекательный работодатель.</p>
 
