--- a/views/sale-realty/prodazha-domov-kottedzhej.html
+++ b/views/sale-realty/prodazha-domov-kottedzhej.html
@@ -9,22 +9,6 @@
     <div data-ng-include="'/views/component/filter.html'"></div>
 
     <ul class="grid grid--small">
-        <!-- <li class="col--1-4">
-            <div class="block">
-                <div class="block-spec">
-                    <div class="block-spec__cover" style="background-image: url(http://www.incom.ru/includes/resizerus.php?params=225x0x170x0x100&path=/upload/iblock/284/evropa_tgb_dzn.jpg);">
-                        <div class="block-spec__desc">
-                            <div class="block-spec__desc-info">
-                                <b>Европа</b><br>
-                                Новорижское шоссе, 22 км
-                            </div>
-                            <div class="block-spec__desc-price"><b>10.8</b><br>млн руб.</div>
-                        </div>
-                    </div>
-                </div>
-            </div>
-        </li> -->
-
         <li class="col--1-4">
             <div class="block-spec">
                 <div class="block-spec__cover" style="background-image: url(http://www.incom.ru/includes/resizerus.php?params=225x0x170x0x100&path=/upload/iblock/284/evropa_tgb_dzn.jpg);">
@@ -62,7 +46,20 @@
         </div>
     </div>
 
-    <p class="text--center margin--v-large">
-        <a href="#/" class="button button--medium button--gray">Все вопросы</a>
-    </p>
+    <h2 class="margin--v">Коттеджи и загородные дома в Подмосковье</h2>
+
+    <p>Для того, чтобы купить коттедж в Подмосковье либо загородный дом, придется потратить много  времени и сил, ведь хочется приобрести загородную недвижимость, полностью соответствующую не только представлениям об идеальном загородном доме, но и финансовым возможностям.</p>
+    <p>Сделать это с минимальными усилиями можно лишь обратившись в проверенное и надежное агентство, такое, как ИНКОМ-Недвижимость. В нашей базе недвижимости более 10 тысяч объектов различной ценовой категории, расположенных на всех направлениях Подмосковья как неподалеку, так и в удалении от столицы. Выбор очень широк, поэтому у нас можно без проблем подобрать и купить коттедж эконом-класса под ключ либо элитный коттедж.</p>
+    <p>При подборе вариантов недвижимости эконом- или бизнес-класса в Подмосковье мы учитываем все ваши предпочтения (местоположение, стоимость загородного жилья, инфраструктура и даже экологическая обстановка). Конечно, купить дом в ближнем Подмосковье дешево не так просто. Однако наша компания может предложить недорогие цены на продажу загородного дома в Подмосковье.</p>
+    <p>В результате, вы с минимальными усилиями получаете свой вожделенный коттедж под ключ по выгодной цене!</p>
+
+    <h3 class="margin--v">Купить загородную недвижимость лучше в ИНКОМ!</h3>
+    <p>С нашей помощью вы купите новый дом или коттедж в Подмосковье максимально выгодно в любом удобном для вас районе, а ведь купить коттедж в Подмосковье недорого – мечта любого желающего приобрести загородную недвижимость для отдыха или постоянного проживания.</p>
+    <p>Обратившись за содействием в ИНКОМ-Недвижимость с целью, например, купить загородный дом в Подмосковье под ключ, вы получаете доступ к одной из наиболее полных баз объектов загородной недвижимости, включающей практически все актуальные на сегодняшний день ценовые предложения по продаже домов и коттеджей в ближнем Подмосковье как варианты эконом-класса, так и элитные дома. Причем купить коттедж в Подмосковье вы сможете очень недорого.</p>
+
+    <h3 class="margin--v">Выбор домов и коттеджей по шоссе</h3>
+    <p>Сориентироваться в море предложений и сделать правильный выбор вам помогут наши эксперты – специалисты агентства недвижимости ИНКОМ-Недвижимость. Они предложат объекты, расположенные во всех районах Подмосковья, и в зависимости от ваших приоритетов наиболее удобные варианты подъезда.</p>
+    <p>Мы поможем купить готовый дом в Московской области недорого, в максимально сжатые сроки и решим все вопросы, связанные с оформлением сделки. Кроме того, мы возьмем на себя все заботы по оформлению и сопровождению продажи загородного дома или коттеджа в Московской области!</p>
+    <p>Покупать и продавать недвижимость с нами просто, легко и максимально выгодно!</p>
+
 </div>
