--- a/Content/less/components/panel.less
+++ b/Content/less/components/panel.less
@@ -53,6 +53,11 @@
     &--realty{
         display: table;
         padding: 10px;
+        cursor: pointer;
+
+        &:hover{
+            background: #fff;
+        }
 
         & .img{
             display: table-cell;
