Add page uslugi/pokupka-kvartir-i-komnat/

--- a/views/rent-realty/flats.html
+++ b/views/rent-realty/flats.html
@@ -43,11 +43,11 @@
                 </li>
             </ul>
 
-            <div class="margin--top">
+            <div class="text--center margin--top">
                 <a href="#/" class="button button--medium button--green">Все дешевые квартиры в Москве</a>
             </div>
 
-            <h2 class="margin--top">К вопросу об аренде квартир в Москве</h2>
+            <h2 class="margin--v">К вопросу об аренде квартир в Москве</h2>
 
             <p>Везунчик тот, кому никогда не приходилось искать съемное жилье для себя или своего семейства хотя бы на полгода. Вопросом, как снять квартиру в Москве, озадачивались многие из нас. Вариант, чтобы дешево, с хорошей транспортной развязкой, с ремонтом, да при этом без попадания на ухищрения мошенников, кажется слегка фантастическим.</p>
             <p>Существует множество подводных камней при поиске жилья по объявлениям. Наниматель может наткнуться на недобросовестных хозяев, на проблемы с участковым, всевозможные недопонимания от собственников в области посещений, замков, порчи имущества, мелкого ремонта <nobr>и т. п.</nobr></p>
@@ -80,7 +80,7 @@
             </div>
 
 
-            <h2>Как снять квартиру в Москве без проблем</h2>
+            <h2 class="margin--v">Как снять квартиру в Москве без проблем</h2>
             <p>Проблема, как снять желаемую квартиру, перестанет пугать, если к ее решению подключить профессионалов. Выбирая агентство недвижимости, стоит обратить внимание на историю работы и отзывы от клиентов. Несомненно, уровень цены на услуги важен, но еще важнее репутация.</p>
             <p>Для нашего агентства с <nobr>20-летним</nobr> стажем аренда квартир, как направление деятельности, стало одним из важнейших. Задача сотрудников компании ИНКОМ-Недвижимость — максимально упростить процесс подбора и учесть все пожелания будущего квартиросъемщика. Также мы поможем избежать всех трений и разногласий в будущем, исходящих, как от собственников, так и от временных жильцов.</p>
             <p>Сегодня совместная работа с агентством ИНКОМ-Недвижимость дает возможность учитывать все требования нанимателя:</p>
