--- a/views/sale-realty/flats.html
+++ b/views/sale-realty/flats.html
@@ -114,7 +114,7 @@
                     </li>
                 </ul>
 
-                <div class="margin--top">
+                <div class="text--center margin--top-large">
                     <a href="#/" class="button button--medium button--green">Самые дешевые квартиры в Москве</a>
                 </div>
 
@@ -128,7 +128,7 @@
                 <p>Также мы оказываем помощь в продаже квартиры в Москве и Подмосковье на вторичном рынке жилья. Мы быстро подберем для вашего предложения заинтересованных покупателей.</p>
                 <p>Просмотреть актуальные и самые свежие варианты комнат и квартир Москвы вы можете в нашей базе квартир.</p>
 
-                <p>
+                <p class="text--center">
                     <a href="#/" class="button button--medium button--green">Предложения квартир в Москве</a>
                 </p>
             </div>
@@ -185,7 +185,7 @@
                     </li>
                 </ul>
 
-                <div class="margin--top">
+                <div class="text--center margin--top">
                     <a href="#/" class="button button--medium button--green">Самые дешевые квартиры в Москве</a>
                 </div>
             </div>
@@ -197,7 +197,7 @@
                 <p>Необходимо продать жилье быстро и выгодно? Мы организуем поиски покупателей и осуществим продажу квартиры в Подмосковье на лучших условиях. Уже много лет мы занимаемся продажей квартир в Подмосковье на рынке вторичного жилья, поэтому наша база объектов удовлетворяет пожелания даже взыскательного клиента.</p>
                 <p>Только что поступившие варианты квартир в Подмосковье вы можете просмотреть уже сейчас!</p>
 
-                <p class="margin--bottom">
+                <p class="text--center margin--v-large">
                     <a href="#/" class="button button--medium button--green" title="Предложения квартир в Подмосковье">Предложения квартир в Подмосковье</a>
                 </p>
 
@@ -266,11 +266,12 @@
                             <a class="question-board__about" href="/offices/flatsretail/21244/realtors/">Отвечает  Мельникова Фаина,<br>офис «Щелковское»</a>
                         </div>
                     </li>
-                </div>
+                </ul>
+            </div>
 
-                <p class="text--center margin--v-large">
-                    <a href="#/" class="button button--medium button--gray">Все вопросы</a>
-                </p>
+            <p class="text--center margin--v-large">
+                <a href="#/" class="button button--medium button--gray">Все вопросы</a>
+            </p>
 
 
             </div>
