add page uslugi/programma-loyalnosti/

--- a/Content/less/components/block.less
+++ b/Content/less/components/block.less
@@ -85,4 +85,21 @@
             }
         }
     }
+
+    // Element 'block-rent'
+    &-rent{
+        padding: 20px 0;
+
+        background: rgb(153,202,58); /* Old browsers */
+        background: -moz-linear-gradient(top,  rgba(153,202,58,1) 0%, rgba(77,161,67,1) 100%); /* FF3.6-15 */
+        background: -webkit-linear-gradient(top,  rgba(153,202,58,1) 0%,rgba(77,161,67,1) 100%); /* Chrome10-25,Safari5.1-6 */
+        background: linear-gradient(to bottom,  rgba(153,202,58,1) 0%,rgba(77,161,67,1) 100%); /* W3C, IE10+, FF16+, Chrome26+, Opera12+, Safari7+ */
+        filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#99ca3a', endColorstr='#4da143',GradientType=0 ); /* IE6-9 */
+
+    }
+
+    // Modificator 'block--white'
+    &--white{
+        background: #fff;
+    }
 }
