--- a/Content/less/components/text.less
+++ b/Content/less/components/text.less
@@ -34,6 +34,9 @@
     &--success {
         color: #8cc14c !important;
     }
+    &--orange{
+        color: #f68b1f !important;
+    }
     &--danger {
         color: #da314b;
     }
