--- a/views/ipoteka.html
+++ b/views/ipoteka.html
@@ -8,7 +8,7 @@
         <h1>Оптимальное решение жилищных <br>проблем с помощью ипотеки</h1>
     </div>
 
-    <div class="panel panel--box panel--box-small">
+    <div class="panel panel--box panel--box-small panel--white">
         <ul class="grid grid--small">
             <li class="col--1-4 text--center">
                 <a href="#">
